# PiAA_LAB_5

./: CMakeLists.txt  README.md
gtests/: kmp_tests.cpp  shift_tests.cpp  tests.cpp
include/: .string_functions.h.swp  KMP_vs_BROOT_FORCE.h  string_functions.h
source/: KMP_vs_BROOT_FORCE.cpp  kmp.cpp  shift.cpp  string_functions.cpp  versus.cpp  versus_test.cpp
